# universalattacks

./: .gitignore  LICENSE  README.md
attack/: .latexmkrc  Makefile  README.md  attackbranch.dzn  attackbranch.mzn  attackbranch.py  attackprf.dzn  attackprf.mzn  attackprf.py  diff.py  difflin.c  difflinprfmilp.py  draw.py  drawprf.py  drawprfmilp.py  input.yaml  orthros.c  utils.c
attack/tikzstyle/: orthros.sty  spn.sty
verification/distinguisher/: CMakeLists.txt  README.md  build.sh  requirements.txt  test_gpu_features.sh  visualize.sh
verification/distinguisher/results/5rv0/: orthros_5r_v0_keys_mode2_offset3.csv  orthros_5r_v0_keys_mode2_offset3_analysis_report.txt  orthros_corr_mode2_r5_v0_o3.csv
verification/distinguisher/results/5rv1/: orthros_5r_v1_keys_mode2_offset3.csv  orthros_5r_v1_keys_mode2_offset3_analysis_report.txt  orthros_corr_mode2_r5_v1_o3.csv
verification/distinguisher/src/: common_types.h  correlation_analysis.cpp  cuda_dlct.cu  openmp_dlct.cpp  orthros_core.h  visualizer.py
verification/distinguisher/src/openmp/: dlct_runner.cpp  random_utils.cpp  random_utils.h
verification/keyrecovery/: Makefile  README.md  attackutils.c  gpu_support.c  keyanalysis.cpp  keyanalysis.py  keyrecovery.c  keyrecovery.cu  orthrosmodkey.c  utils.c  visualize_keyanalysis.py
verification/keyrecovery/llr/: Makefile  README.md  histogram-5.csv  histogram-7.csv  main.cpp  main.h  makefile.opt  orthros.cpp  plot_hist.py
verification/keyrecovery/results/4rv2/output16strongkey/: out_7-10_13-4.txt  out_8-7_13-7.txt  out_8-9_7-11.txt  strong_key_5r_deg16_v0.txt
verification/keyrecovery/results/4rv2/output16weakkey/: out_1-3_1-0.txt  out_8-5_9-12.txt  out_9-0_5-1.txt  weak_key_5r_deg16_v0.txt
verification/keyrecovery/results/4rv2/output17strongkey/: out_13-6_5-12.txt  out_4-14_13-15.txt  out_9-1_14-5.txt  strong_key_5r_deg17_v0.txt
verification/keyrecovery/results/4rv2/output17weakkey/: out_3-1_10-11.txt  out_4-6_11-15.txt  out_6-4_0-6.txt  weak_key_5r_deg17_v0.txt
verification/keyrecovery/results/4rv2/output18strongkey/: out_1-1_14-14.txt  out_1-6_10-8.txt  out_9-13_4-13.txt  strong_key_5r_deg18_v0.txt
verification/keyrecovery/results/4rv2/output18weakkey/: out_1-9_15-9.txt  out_2-0_10-11.txt  out_8-15_15-11.txt  weak_key_5r_deg18_v0.txt
verification/keyrecovery/results/4rv2/output19strongkey/: out_4-6_4-3.txt  out_9-2_14-13.txt  out_9-8_12-0.txt  strong_key_5r_deg19_v0.txt
verification/keyrecovery/results/4rv2/output19weakkey/: out_3-1_12-8.txt  out_3-3_15-9.txt  out_4-11_11-14.txt  weak_key_5r_deg19_v0.txt
verification/keyrecovery/results/5rv0/output22strongkey/: out_14-9_7-10.txt  out_2-4_11-4.txt  out_6-7_8-13.txt  out_9-8_12-4.txt
verification/keyrecovery/results/5rv0/output22weakkey/: out_0-10_15-9.txt  out_0-7_15-4.txt  out_7-4_6-4.txt  out_9-4_9-14.txt
verification/keyrecovery/results/5rv0/output23strongkey/: out_10-10_8-1.txt  out_14-7_14-0.txt  out_5-7_11-6.txt  out_9-0_14-9.txt
verification/keyrecovery/results/5rv0/output23weakkey/: out_14-1_15-4.txt  out_15-10_5-14.txt  out_2-1_4-15.txt  out_9-4_12-5.txt
verification/keyrecovery/results/5rv0/output24strongkey/: out_0-5_12-4.txt  out_10-6_12-1.txt  out_12-11_6-9.txt  out_3-10_15-10.txt
verification/keyrecovery/results/5rv0/output24weakkey/: out_15-5_2-0.txt  out_2-13_11-0.txt  out_5-6_15-14.txt  out_7-13_2-11.txt
verification/keyrecovery/results/5rv0/output25strongkey/: out_13-7_6-10.txt  out_5-11_8-3.txt  out_5-15_4-11.txt
verification/keyrecovery/results/5rv0/output25weakkey/: out_1-2_1-8.txt  out_13-8_4-7.txt  out_15-5_1-7.txt  out_6-4_10-3.txt
verification/keyrecovery/results/5rv0/output26strongkey/: out_0-11_7-10.txt  out_8-13_7-2.txt
verification/keyrecovery/results/5rv0/output26weakkey/: out_0-13_3-8.txt  out_12-3_8-3.txt  out_14-3_13-14.txt  out_15-0_11-8.txt  out_4-1_9-10.txt  out_5-8_4-5.txt  out_6-3_8-11.txt
verification/keyrecovery/results/5rv0/output27strongkey/: out_2-14_4-4.txt  strong_key_6r_deg27_v0.txt
verification/keyrecovery/results/5rv0/output27weakkey/: out_1-14_15-9.txt  weak_key_6r_deg26_v0.txt
verification/keyrecovery/results/5rv0/output28strongkey/: out_4-6_5-11.txt  strong_key_6r_deg28_v0.txt
verification/keyrecovery/results/5rv0/output28weakkey/: out_13-7_13-10.txt  out_4-1_3-0.txt  out_4-6_6-4.txt  out_6-1_0-9.txt  weak_key_6r_deg28_v0.txt
verification/keyrecovery/scripts/: threshold_calculator.py  visualize_correlations.py
